change showRoverContent to be center

--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -642,9 +642,10 @@ border: none;
   font-family: 'Montserrat Alternates', sans-serif;
   color: white
 }
-.backButton{
-
+.showRoverContent{
+  text-align: center;
 }
+
 
 /* -------------------  MOBILE  --------------------- */
 
